# google-ad-manager-mcp

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/codeql/: codeql-rust.yml
.github/codeql/actions-workflow-security/: qlpack.yml
.github/workflows/: cargo-package-readiness.yml  code-coverage.yml  codeql-query-tests.yml  codeql.yml  dependency-governance.yml  devskim.yml  generate-contract-artifacts.yml  generate-schema-contract.yml  linux-artifact.yml  release.yml  rust-2024-compatibility.yml  rust-baseline.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  RELEASING.md  SECURITY_MODEL.md  TOOL_GUIDE.md  decision-0001-beta-rest-read-only.md  decision-0002-guarded-rest-writes-before-soap-trafficking.md  decision-0003-guarded-soap-trafficking-adapter.md  decision-0004-exchange-protection-proof.md  decision-0005-ad-unit-dependency-proof.md  decision-0006-evidence-graded-ad-unit-retirement-assessment.md  decision-0006-staged-ad-unit-retirement-assessment.md  dependency-governance.md
scripts/: dependency_governance_check.sh  rebaseline_tool_schema_snapshot.sh  rmcp_macro_runtime_pin_check.py
spec/: tool_schema_snapshot.v1.json
src/: ad_unit_retirement.rs  auth_ux.rs  client.rs  config.rs  contract.rs  error.rs  evidence.rs  fingerprint.rs  lib.rs  main.rs  tool_discovery.rs  tool_surface.rs  tools.rs
src/ad_unit_retirement/: decision.rs  descendants.rs  inventory.rs  receipt.rs  tests.rs
src/probe_projection/: dependency.rs  exchange.rs  ledger.rs  mod.rs  receipt.rs  tests.rs  validation.rs
src/probe_projection/tests/: exchange.rs
tests/: documentation_contract.rs  stdio_smoke.rs  tool_schema_snapshot.rs
